
	* info/session.c (info_search_1): Unused 'key' argument removed.
	Rely on info_search_internal to print an error message.
	(info_search_internal): Print an error message if search failed if not
	in interactive search.
	* info/window.c (set_window_pagetop): Comment changed.
	* info/info.c (info_error_was_printed): Variable removed.  All
	accesses removed.

2014-07-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.c (compile): Keep going for unrecognized or invalid
	actions.
	* info/t/Infokey-config: Add lines with invalid actions.

	* info/signals.c (old_TERM): New variable.
	(mask_termsig, initialize_info_signal_handler, info_signal_proc): Trap
	SIGTERM as was done for SIGINT to allow cleanup of terminal state.

2014-07-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.c (compile): Don't allow binding to menu-digit.
	* info/session.c (info_next_line, info_prev_line): Don't actually
	move cursor until we have set the right column.
	* info/terminal.c (terminal_begin_using_terminal): Check 'Km'
	capability is what we expect it to be.

2014-07-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.c (compile) <in_line_comment>: Use = where intended.
	(compile) <get_action>: Remove unused variable.
	* info/infomap.c (keymap_bind_keyseq): Remove unused variable.
	(fetch_user_maps): Remove unused variables.
	(section_to_keymaps): Remove unused variable.

2014-07-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (collect_line_starts, _calc_line_starts): Renamed.
	* info/window.h (WINDOW): Change type of pagetop field to long.
	Remove declaration of removed function.
	* info/nodes.h (NODE): Change type of line_number field to long.
	* info/window.c (window_log_to_phys_line): Type of arguments and
	return value changed.

	* info/display.c (display_update_display): Arguments changed.  All
	callers updated.
	(display_update_one_window): Allow interrupting redisplay when
	clearing empty screen lines after the end of a node.
